--- a/doctorProject/src/main/resources/application.properties
+++ b/doctorProject/src/main/resources/application.properties
@@ -1,12 +1,20 @@
-spring.application.name=doctorProject
+
+server.port=8080
+server.error.include-message=always
+server.error.include-binding-errors=always
+
 spring.datasource.url=jdbc:mysql://localhost:3306/docpro
 spring.datasource.username=root
 spring.datasource.password=1234567890
+spring.jpa.open-in-view=false
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-server.port=8080
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+
+
+jwt.secret=secret_key_for_demo_purpose_which_should_be_very_long_12345
+jwt.expiration=36000000
